--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 
   <!-- SEGMENTS sempre abaixo do título -->
   <div class="segments" role="tablist" aria-label="Net Worth Tabs" data-scope="networth">
-    <button class="segment is-active" role="tab" data-target="#networth-byAccount">By Account</button>
-    <button class="segment" role="tab" data-target="#networth-byTag">By Tag</button>
-    <button class="segment" role="tab" data-target="#networth-debt">Debt</button>
+    <button class="segment is-active" role="tab" data-target="#networth-byAccount">Receitas</button>
+    <button class="segment" role="tab" data-target="#networth-byTag">Despesas</button>
+    <button class="segment" role="tab" data-target="#networth-debt">Reservas</button>
   </div>
 </div>
 
