--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
         <div class="cash-current" aria-live="polite">R$20.000</div>
 
-        <div class="cash-subtitle">Caixa da Empresa em Meses Anteriores</div>
+        <div class="cash-subtitle">Meses Anteriores</div>
 
         <div class="cash-history" role="list">
           <div class="history-item" role="listitem">
@@ -140,13 +140,6 @@
             <div class="history-value">R$10.000</div>
             <div class="history-month">Outubro</div>
           </div>
-
-          <div class="history-item" role="listitem">
-            <div class="history-value">R$15.000</div>
-            <div class="history-month">Novembro</div>
-          </div>
-        </div>
-      </div>
     </div>
   </div>
 </section>
